--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,8 +1,8 @@
 <div class="page-header">
-  <h1>All of the Statuses</h1>
+  <h3>Status Feed</h3>
 </div>
 
-<%= link_to "Post a New Status", new_status_path, class: "btn btn-success" %>
+<%= link_to "Post a New Status", new_status_path, class: "btn btn-primary" %>
 
 <% @statuses.each do |status| %>
   <% if can_display_status?(status) %>
