--- a/app/views/user_notifier/friend_requested.html.erb
+++ b/app/views/user_notifier/friend_requested.html.erb
@@ -3,4 +3,4 @@ Hi <%= @friend.first_name %>,
 <%= @user.first_name %> wants to be friends on Treebook. Isn't that great?
 
 Love,
-Mike The Frog
+Friend Zone
